# automaton-auditor-digital-courtroom

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rubric.json
.github/workflows/: ci.yml
audit/report_bypeer_received/: team_beta_review_2026-03-01.md
audit/report_onpeer_generated/: team_alpha_peer_audit_2026-03-01.md
audit/report_onself_generated/: final_audit_report.md
docs/: architecture.md  design_notes.md  today_submission_rubric.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
rubrics/defaults/: industry_iso_soc2.json  python_fastapi_best_practices.json  typescript_react_best_practices.json
src/: __init__.py  cli.py  graph.py  server.py  state.py
src/config/: settings.py
src/nodes/: aggregator.py  context_builder.py  detectives.py  judges.py  justice.py
src/prompts/: chief_justice.txt  defense.txt  prosecutor.txt  techlead.txt
src/service/: async_jobs.py  audit_runner.py  audit_store.py  security.py
src/tools/: ast_analysis.py  doc_tools.py  git_analysis.py  pdf_image_tools.py  repo_tools.py  sandbox.py
src/utils/: markdown_renderer.py  (+2 more)
tests/: test_ast_analysis.py  test_async_jobs.py  test_audit_store.py  test_detective_nodes.py  test_doc_tools.py  test_governance_maturity.py  test_judicial_schema.py  test_partial_graph_orchestration.py  test_repo_tools.py  test_rubric_loader.py  test_runtime_options_api.py  test_security.py  test_server_api.py  test_settings.py  test_state_schema.py  test_synthesis_rules.py  test_vision_tools.py
