[project]
name = "automaton-auditor-digital-courtroom"
version = "0.1.0"
description = "Autonomous governance swarm for forensic AI repo auditing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "typing-extensions>=4.12.0",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-ollama>=0.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pypdf>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
